--- a/little-lemon/public/index.html
+++ b/little-lemon/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Little Lemon Restraunt"/>
+    <meta name="og:title" content="Little Lemon" />
+    <meta name="og:description" content="Little Lemon Chicago" />
+    <meta name="og:image" content="Logo.svg" />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
